--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-notification-badge": "^1.5.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-stripe-elements": "^5.0.0",
     "redux": "^4.0.4"
   },
   "scripts": {
